# dialects-io-be

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  zshrc
app/app/apis/: post.py
app/app/models/schemas/: util.py  word.py
app/auth/: core.py
app/models/schemas/: source.py  user.py  word.py
app/models/sqlalchemy/: __init__.py  base.py  models.py  source.py  user.py  word.py
app/repositories/: source.py  user.py
app/services/: user.py
app/utils/: service_registration.py
