[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["yijunx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.34"
pydantic-settings = "^2.5.2"
flask = "^3.0.3"
gevent = "^24.2.1"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
